Reduce dependencies for server launcher by limiting use of third party libraries
Also cleans up some unnecessary use of IOUtils.copy when there are more canonical approaches in modern JVM, and removes some misleading old deprecations from the package metadata stores.